--- a/nodejs-service.yml
+++ b/nodejs-service.yml
@@ -1,38 +1,19 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nodejs-deployment
-  labels:
-    app: nodejs
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nodejs
-  template:
-    metadata:
-      labels:
-        app: nodejs 
-    spec:
-      containers:
-      - name: nodeserver
-        image: take1995/nodejstest:latest
-        ports:
-        - containerPort: 3000
-        
-        
----
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeapp-service
+  creationTimestamp: null
+  labels:
+    app: nodejs-deployment
+  name: nodejs-service
+  namespace: nodejsTest
 spec:
-  selector:
-    app: nodeapp 
-  type: LoadBalancer
   ports:
-  - protocol: TCP
-    port: 5000
-    targetPort: 3000
-    nodePort: 31110
+  - port: 5000
+    protocol: TCP
+    targetPort: 80
+    nodePort: 31000
+  selector:
+    app: nodejs-deployment
+  type: NodePort
+status:
+  loadBalancer: {}
