--- a/nodejs-deployment.yml
+++ b/nodejs-deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nodejs-deployment
   name: nodejs-deployment
-  namespace: nodejsTest
+  namespace: nodejstest
 spec:
   replicas: 1
   selector:
@@ -19,6 +19,7 @@ spec:
         app: nodejs-deployment
     spec:
       containers:
-      - image: take1995/nodejstest:latest
+      - image: take1995/nodejstest
+        name: examplenodejstest
         resources: {}
 status: {}
