--- a/nodejs-service.yml
+++ b/nodejs-service.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nodejs-deployment
   name: nodejs-service
-  namespace: nodejsTest
+  namespace: nodejstest
 spec:
   ports:
   - port: 5000
