--- a/nodejs-deployment.yml
+++ b/nodejs-deployment.yml
@@ -21,5 +21,7 @@ spec:
       containers:
       - image: take1995/nodejstest
         name: examplenodejstest
+        ports:
+        - containerPort: 3000
         resources: {}
 status: {}
